first map displayed

--- a/src/app.html
+++ b/src/app.html
@@ -5,8 +5,11 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
+		<title>FP2: Speculative Affordances</title>
 	</head>
+	<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+		<div id="map"></div>
 	</body>
 </html>
