added house grab animation

--- a/src/app.html
+++ b/src/app.html
@@ -29,7 +29,7 @@
 		
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
-		<title>FP3: Speculative Affordances</title>
+		<title>Final Project: Speculative Affordances</title>
 	</head>
 	<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
 	<body data-sveltekit-preload-data="hover">
